# interpro-arrow

./: .gitignore  Cargo.toml  dprint.json
.github/workflows/: release.yml
src/: args.rs  gff3.rs  main.rs  partition.rs  records.rs
src/parser/: expr.rs  lex.rs
src/records/: domain.rs  gene.rs  mod.rs  term.rs
tests/: small.gff
