[package]
name = "interpro-arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", features = ["io_ipc", "io_ipc_compression", "io_print"] }
flate2 = "1.0.23"
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
