[package]
name = "ipsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", features = ["io_ipc", "io_ipc_compression"] }
flate2 = "1.0.23"
glob = "0.3.0"
polars = { version = "0.21.1", features = ["ipc", "dtype-i16"] }
polars-core = "0.21.1"
rayon = "1.5.2"
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
uuid = { version = "1", features = ["v4"]}

[dev-dependencies]
tempfile = "3.3.0"
